tests/ui/error-codes/E0227.stderr
error[E0227]: ambiguous lifetime bound, explicit lifetime bound required
  --> $DIR/E0227.rs:7:10
   |
LL |     baz: dyn FooBar<'foo, 'bar>,
   |          ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0227`.
